...
                                    android:background="@drawable/circle"
                                    />
                        </RelativeLayout>


                        <TextView
                            android:id="@+id/tvusername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgdog"
                            android:layout_centerHorizontal="true"
                            android:text="UserName"
                            android:textSize="32dp"
...
                                            android:textColor="@color/white"
                                            android:fontFamily="sans-serif-light"

                                            />

                                        <TextView
                                            android:id="@+id/btn_app"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Appointment"
                                            android:textSize="32dp"
                                            android:textColor="@color/white"
                                            android:fontFamily="sans-serif-light"
...
                                            android:layout_height="wrap_content"
                                            android:text="OwnerName"
                                            android:textColor="@color/headings"
                                            android:textSize="15dp"/>

                                        <EditText
                                            android:id="@+id/et_ownername"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="OwnerName"
                                            android:fontFamily="@font/quicksand_light"
                                            android:textColor="#000000"
                                            android:textSize="20dp"/>
...
                                            android:layout_height="wrap_content"
                                            android:text="PetName"
                                            android:textColor="@color/headings"
                                            android:textSize="15dp"/>

                                        <EditText
                                            android:id="@+id/et_petname"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="PetName"
                                            android:fontFamily="@font/quicksand_light"
                                            android:textColor="#000000"
                                            android:textSize="20dp"/>
...
                                            android:layout_height="wrap_content"
                                            android:text="Breed"
                                            android:textColor="@color/headings"
                                            android:textSize="15dp"/>

                                        <EditText
                                            android:id="@+id/et_breed"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="Breed"
                                            android:fontFamily="@font/quicksand_light"
                                            android:textColor="#000000"
                                            android:textSize="20dp"/>
...
                                            android:layout_height="wrap_content"
                                            android:text="PetAge"
                                            android:textColor="@color/headings"
                                            android:textSize="15dp"/>

                                        <EditText
                                            android:id="@+id/et_age"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="PetAge"
                                            android:fontFamily="@font/quicksand_light"
                                            android:textColor="#000000"
                                            android:textSize="20dp"/>
...
                                            android:layout_height="wrap_content"
                                            android:text="Gender"
                                            android:textColor="@color/headings"
                                            android:textSize="15dp"/>

                                        <EditText
                                            android:id="@+id/et_gender"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:hint="Gender"
                                            android:fontFamily="@font/quicksand_light"
                                            android:textColor="#000000"
                                            android:textSize="20dp"/>
...
