<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc1"
        android:orientation="vertical"
        android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="First Name"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:drawableRight="@drawable/ic"
            android:id="@+id/etfname"
            android:paddingLeft="15dp"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/tcolor"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Last Name"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etlname"
            android:drawableRight="@drawable/ic"
            android:layout_width="372dp"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/tcolor"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Address"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etaddress"
            android:layout_height="wrap_content"
            android:layout_width="372dp"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:drawableRight="@drawable/ic_home_black_24dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/tcolor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Phone"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_phone_black_24dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/tcolor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Email"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_email"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="15dp"
            android:textColor="@color/tcolor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Username"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/tcolor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Password"
            android:textSize="18dp"
            android:textColor="#3f4658"/>
        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_password"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textColor="@color/tcolor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Confrim Password"
            android:textSize="18dp"
            android:textColor="#3f4658"/>

        <EditText
            android:id="@+id/etcmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_password"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textColor="@color/tcolor" />

        <Button
            android:id="@+id/btnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/quicksand_bold"
            android:text="register"
            android:textColor="#F3F3F3"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-light"
                android:text="already_registered"
                android:textColor="#DD10C9"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtlog"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:text="Login"
                android:textColor="#FF9100"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>



