...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    android:gravity="center_horizontal"
    android:id="@+id/logint"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:background="@drawable/bgcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
